Initial support for tooltips
Tooltips are implemented as a ClutterAction which can be added to an actor like a click actions or the drag'n'drop ones. The tooltip action will emit the action signal "show-tooltip" at the stage of the tooltip's actor which will take to display the tooltip.

--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -7,6 +7,16 @@
 	outline-width: 1.0;
 }
 
+/* Tooltip */
+#tooltip
+{
+	background-type: fill outline;
+	background-fill-color: #e0e000ff;
+	outline-color: #808000ff;
+	outline-width: 1.0;
+	text-color: #000000;
+}
+
 /* Quicklaunch */
 #quicklaunch
 {
