Allow to nagivate through favourite items and to activate them if quicklaunch has focus
Implements foucable interface at quicklaunch and fixes typo. Also force a redraw if stage is resume (i.e. if running in daemon mode)

--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -374,3 +374,11 @@ XfdashboardWindowsView
 {
 	background-type: outline;
 }
+
+#quicklaunch XfdashboardButton:selected
+{
+	background-type: fill rounded-corners;
+	background-fill-color: #0000ff;
+	corners: all;
+	corner-radius: 4.0;
+}
