Do not stop selection in quicklaunch by keyboard at beginning or end of actors but start over

--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -378,7 +378,7 @@ XfdashboardWindowsView
 #quicklaunch XfdashboardButton:selected
 {
 	background-type: fill rounded-corners;
-	background-fill-color: #0000ff;
+	background-fill-color: #b0b0b0;
 	corners: all;
 	corner-radius: 4.0;
 }
