Allow selection of windows with keyboard when viewpad is focused and windows view is current active view
Arrow keys will move the selection marker through visible windows. Enter will activate the selected window as it will when clicked with pointer device. Backspace or Delete will close the window like clicking the close button with pointer device.

--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -382,3 +382,10 @@ XfdashboardWindowsView
 	corners: all;
 	corner-radius: 4.0;
 }
+
+XfdashboardLiveWindow:selected
+{
+	background-type: outline;
+	outline-color: #ff0000;
+	outline-width: 4.0;
+}
