Allow navigation in applications view
Currently only list mode (as defined in default theme) is supported. Arrow keys up and down will move the selection and Enter will execute the selected application if not parent menu was selected. In this case the parent menu will be shown.

--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -383,9 +383,17 @@ XfdashboardWindowsView
 	corner-radius: 4.0;
 }
 
-XfdashboardLiveWindow:selected
+XfdashboardWindowsView XfdashboardLiveWindow:selected
 {
 	background-type: outline;
 	outline-color: #ff0000;
 	outline-width: 4.0;
+}
+
+XfdashboardApplicationsView XfdashboardButton:selected
+{
+	background-type: fill rounded-corners;
+	background-fill-color: #808080;
+	corners: all;
+	corner-radius: 4.0;
 }
