Allow navigation in search view
Currently only list mode (as defined in default theme) is supported. Arrow keys up and down will move the selection. ENTER is currently not being handled.

--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -397,3 +397,11 @@ XfdashboardApplicationsView XfdashboardButton:selected
 	corners: all;
 	corner-radius: 4.0;
 }
+
+XfdashboardSearchView XfdashboardSearchResultContainer XfdashboardButton:selected
+{
+	background-type: fill rounded-corners;
+	background-fill-color: #808080;
+	corners: all;
+	corner-radius: 4.0;
+}
