Complete navigation in applications view
Now it is possible to move selection in icon mode at applications view

--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -313,7 +313,7 @@ XfdashboardSearchView XfdashboardSearchResultContainer XfdashboardButton.result-
 /* Applications view */
 XfdashboardApplicationsView
 {
-	view-mode: list;
+	view-mode: icon;
 	spacing: 4.0;
 }
 
