Allow view icon to be themed in CSS instead of enforcing use of default icon specified by view

--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -261,7 +261,6 @@ XfdashboardCollapseBox
 	vertical-scrollbar-policy: automatic;
 }
 
-
 /* Search view */
 XfdashboardSearchView XfdashboardSearchResultContainer
 {
@@ -356,6 +355,7 @@ XfdashboardApplicationsView XfdashboardButton.view-mode-list
 XfdashboardWindowsView
 {
 	spacing: 8.0;
+	view-icon: windows-view.png;
 }
 
 /* Focus */
