Property "include-window-frame" of XfdashboardWindowContent is now configurable (stylable) via CSS
This commit completes issue #10. The behaviour to show window frame of a window or just the window content can now be controlled via CSS by theme designer. Default theme will turn this feature on.

--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -4,6 +4,12 @@ XfdashboardStage
 	background-color: #000000e0;
 }
 
+/* Window content */
+XfdashboardWindowContent
+{
+	include-window-frame: true;
+}
+
 /* Notifications */
 #notification
 {
