Fix floating point value
Remove 'f' behind floating point value. A left-over from C code :(

--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -271,7 +271,7 @@ XfdashboardCollapseBox
 /* View selector */
 #view-selector
 {
-	spacing: 4.0f;
+	spacing: 4.0;
 }
 
 #view-selector XfdashboardToggleButton
