--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -1,7 +1,7 @@
 @constants
 {
-	background: #5792e260;
-	overlay-background: #5792e2ff;
+	background: @rgba(87, 146, 226, 96) /*#5792e260*/;
+	overlay-background: @alpha(@background, 255) /*#5792e2ff*/ ;
 	overlay-outline: #4681d1ff;
 }
 
