--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -3,11 +3,12 @@
 	background: @rgba(87, 146, 226, 0.38) /*#5792e260*/;
 	overlay-background: @alpha(@background, 1.0) /*#5792e2ff*/ ;
 	overlay-outline: #4681d1ff;
-	close-icon: @try_icons("window-close-symbolic", "window-close", "gtk-close");
-	search-icon: @try_icons("edit-find-symbolic", "edit-find", "gtk-find");
-	home-icon: @try_icons("go-home", "gtk-home");
-	trash-icon: @try_icons("user-trash", "gtk-delete");
-	clear-icon: @try_icons("edit-clear-symbolic", "edit-clear", "gtk-clear");
+	missing-icon: @try_icons("image-missing", "gtk-missing-image");
+	close-icon: @try_icons("window-close-symbolic", "window-close", "gtk-close", @missing-icon);
+	search-icon: @try_icons("edit-find-symbolic", "edit-find", "gtk-find", @missing-icon);
+	home-icon: @try_icons("go-home", "gtk-home", @missing-icon);
+	trash-icon: @try_icons("user-trash", "gtk-delete", @missing-icon);
+	clear-icon: @try_icons("edit-clear-symbolic", "edit-clear", "gtk-clear", @missing-icon);
 }
 
 /* Stage */
