--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -14,7 +14,8 @@
 /* Stage */
 XfdashboardStage
 {
-	background-color: #000000e8;
+	background-color: #000000d0;
+	background-image-type: desktop;
 }
 
 /* Window content */
