Set background to red (warning) if moving a favourite to trash

--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -111,6 +111,7 @@ XfdashboardQuicklaunch #trash-button
 XfdashboardQuicklaunch #trash-button:drop-target
 {
 	background-type: fill;
+	background-fill-color: red;
 }
 
 .drag-source-XfdashboardQuicklaunch:drag-handle
