Split bindings into two seperate classes: bindings pool and binding
By splitting XfdashboardBindings into two seperate classes XfdashboardBinding (a keyboard or pointer binding) and XfdashboardBindingsPool (a collection of bindings with actions associated) the code should be easier to read, to maintain and to extent.

--- a/data/themes/xfdashboard/xfdashboard.css
+++ b/data/themes/xfdashboard/xfdashboard.css
@@ -15,7 +15,7 @@
 XfdashboardStageInterface
 {
 	background-color: #000000d0;
-	background-image-type: desktop;
+	/* background-image-type: desktop; */
 }
 
 /* Window content */
